syntax = "proto2";
package account;

message Account {
    required string user_name      = 1;
    required string user_password  = 2;
}
